--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Example</title>
+<title>Isomer Redactor</title>
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/uikit/2.6.0/css/uikit.min.css">
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/uikit/2.6.0/css/addons/uikit.addons.min.css">
 <style>
