--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ html, body {
 	<div class="uk-width-1-10">..</div>
 	<div id="canvas" class="uk-width-7-10"></div>
 	<div class="uk-width-2-10">
-		<ul class="uk-nav uk-nav-side">
+		<ul id="obj-list" class="uk-nav uk-nav-side">
 			<li><a href="">vnfjkdslvfdnsjk</a></li>
 			<li class="uk-active"><a href="">vnfjkdslvfdnsjk</a></li>
 			<li><a href="">...</a></li>
