--- a/index.html
+++ b/index.html
@@ -30,16 +30,8 @@ html, body {
 
 			<div style="" class="uk-dropdown uk-dropdown-navbar">
 				<ul class="uk-nav uk-nav-navbar">
-					<li><a data-uk-modal="{target:'#AddPrismModal',bgclose:false}" href="#">Add Prism</a></li>
+					<li><a data-uk-modal="{target:'#AddPrismModal',  bgclose:false}" href="#">Add Prism</a></li>
 					<li><a data-uk-modal="{target:'#AddPyramidModal',bgclose:false}" href="#">Add Pyramid</a></li>
-					<!--<li><a href="#">Item</a></li>
-					<li><a href="#">Another item</a></li>
-					<li class="uk-nav-header">Header</li>
-					<li><a href="#">Item</a></li>
-					<li><a href="#">Another item</a></li>
-					<li class="uk-nav-divider"></li>
-					<li><a href="#">Separated item</a></li>
-					-->
 				</ul>
 			</div>
 
@@ -48,8 +40,53 @@ html, body {
 
 </nav>
 <div class="uk-grid uk-grid-small">
-	<div class="uk-width-1-10">..</div>
-	<div id="canvas" class="uk-width-7-10"></div>
+	<div class="uk-width-2-10">
+		<form class="uk-form">
+			<fieldset>
+				<legend>Position</legend>
+
+				<div class="uk-form-row">
+					<label class="uk-form-label" for="x">X</labbel> <input id="x" value="0" class="uk-form-width-small uk-form-mini" type="number">
+				</div>
+
+				<div class="uk-form-row">
+					<label class="uk-form-label" for="y">Y</label> <input id="y" value="0" class="uk-form-width-small uk-form-small" type="number">
+				</div>
+
+				<div class="uk-form-row">
+					<label class="uk-form-label" for="z">Z</label> <input id="z" value="0" class="uk-form-width-small uk-form-small" type="number">
+				</div>
+
+				<div class="uk-form-row">
+					<a id="Move" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Move</a>
+				</div>
+			</fieldset>
+		</form>
+
+		<form class="uk-form">
+			<fieldset>
+				<legend>Size</legend>
+
+				<div class="uk-form-row">
+					<label class="uk-form-label" for="dx">X</label> <input id="dx" value="1" class="uk-form-width-small uk-form-small" type="number">
+				</div>
+
+				<div class="uk-form-row">
+					<label class="uk-form-label" for="dy">Y</label> <input id="dy" value="1" class="uk-form-width-small uk-form-small" type="number">
+				</div>
+
+				<div class="uk-form-row">
+					<label class="uk-form-label" for="dz">Z</label> <input id="dz" value="1" class="uk-form-width-small uk-form-small" type="number">
+				</div>
+
+				<div class="uk-form-row">
+					<a id="Resize" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Resize</a>
+				</div>
+			</fieldset>
+		</form>
+
+	</div>
+	<div id="canvas" class="uk-width-6-10"></div>
 	<div class="uk-width-2-10">
 		<ul id="obj-list" class="uk-nav uk-nav-side">
 			<li><a href="">vnfjkdslvfdnsjk</a></li>
@@ -94,7 +131,7 @@ html, body {
 				</div>
 
 				<div class="uk-form-row">
-					<a id="AddPrism" class="uk-modal-close uk-button uk-button-primary">Add</a>
+					<a id="AddPrism" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Add</a>
 				</div>
 
 			</fieldset>
@@ -133,7 +170,7 @@ html, body {
 				</div>
 
 				<div class="uk-form-row">
-					<a id="AddPyramid" class="uk-modal-close uk-button uk-button-primary">Add</a>
+					<a id="AddPyramid" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Add</a>
 				</div>
 
 			</fieldset>
