--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="uk-height-1-1 uk-margin-remove" lang="en">
 <head>
 <meta charset="utf-8" />
 <title>Isomer Redactor</title>
@@ -7,16 +7,18 @@
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/uikit/2.6.0/css/addons/uikit.addons.min.css">
 <style>
 html, body {
-	overflow: hidden;
 	padding: 0;
 	margin: 0;
+	overflow: hidden;
+	/*
 	width: 100%;
 	height: 100%;
+	*/
 }
 </style>
 </head>
-<body>
-<nav class="uk-navbar">
+<body class="uk-height-1-1 uk-margin-remove">
+<nav style="position: absolute;width:100%;" class="uk-navbar">
 
 	<div class="uk-navbar-content">
 		<div class="uk-button-group">
@@ -39,8 +41,9 @@ html, body {
 	</ul>
 
 </nav>
-<div class="uk-grid uk-grid-small">
-	<div class="uk-width-2-10">
+<div class="uk-grid uk-grid-small uk-vertical-align uk-height-1-1 uk-margin-remove">
+	<div class="uk-width-2-10 uk-vertical-align-middle uk-height-1-1">
+		<br/><br/>
 		<form class="uk-form">
 			<fieldset>
 				<legend>Position</legend>
@@ -86,8 +89,9 @@ html, body {
 		</form>
 
 	</div>
-	<div id="canvas" class="uk-width-6-10"></div>
-	<div class="uk-width-2-10">
+	<div id="canvas" class="uk-width-6-10 uk-vertical-align-middle  uk-height-1-1"></div>
+	<div class="uk-width-2-10 uk-vertical-align-middle uk-height-1-1">
+		<br/><br/>
 		<ul id="obj-list" class="uk-nav uk-nav-side">
 			<li><a href="">vnfjkdslvfdnsjk</a></li>
 			<li class="uk-active"><a href="">vnfjkdslvfdnsjk</a></li>
