--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@ html, body {
 	padding: 0;
 	margin: 0;
 	overflow: hidden;
-	/*
-	width: 100%;
-	height: 100%;
-	*/
 }
 </style>
 </head>
@@ -25,41 +21,30 @@ html, body {
 	<div class="uk-width-2-10 uk-width-large-1-10 uk-height-1-1">
 		<br/><br/>
 		<div class="uk-panel uk-panel-box">
-		<form class="uk-form">
+		<h6 id="obj">Select any object</h6>
+		<form id="pos" class="uk-form">
 			<fieldset>
 				<legend>Position</legend>
 
 				<div class="uk-form-row">
-					<input data-uk-tooltip="{pos:'right'}" title="X" id="x" value="0" class="uk-width-1-1 uk-form-mini" type="number">
-				</div>
-				<div class="uk-form-row">
+					<input data-uk-tooltip="{pos:'right'}" title="X" id="x" value="0" class="uk-width-1-1 uk-form-small" type="number">
 					<input data-uk-tooltip="{pos:'right'}" title="Y" id="y" value="0" class="uk-width-1-1 uk-form-small" type="number">
-				</div>
-				<div class="uk-form-row">
 					<input data-uk-tooltip="{pos:'right'}" title="Z" id="z" value="0" class="uk-width-1-1 uk-form-small" type="number">
-				</div>
 
-				<div class="uk-form-row">
 					<a id="Move" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Move</a>
 				</div>
 			</fieldset>
 		</form>
 
-		<form class="uk-form">
+		<form id="size" class="uk-form">
 			<fieldset>
 				<legend>Size</legend>
 
 				<div class="uk-form-row">
-					<input data-uk-tooltip="{pos:'right'}" title="X" id="x" value="0" class="uk-width-1-1 uk-form-mini" type="number">
-				</div>
-				<div class="uk-form-row">
-					<input data-uk-tooltip="{pos:'right'}" title="Y" id="y" value="0" class="uk-width-1-1 uk-form-small" type="number">
-				</div>
-				<div class="uk-form-row">
-					<input data-uk-tooltip="{pos:'right'}" title="Z" id="z" value="0" class="uk-width-1-1 uk-form-small" type="number">
-				</div>
+					<input data-uk-tooltip="{pos:'right'}" title="X or Radius" id="x" value="0" class="uk-width-1-1 uk-form-small" type="number">
+					<input data-uk-tooltip="{pos:'right'}" title="Y or Vertices" id="y" value="0" class="uk-width-1-1 uk-form-small" type="number">
+					<input data-uk-tooltip="{pos:'right'}" title="Z or Height" id="z" value="0" class="uk-width-1-1 uk-form-small" type="number">
 
-				<div class="uk-form-row">
 					<a id="Resize" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Resize</a>
 				</div>
 			</fieldset>
@@ -67,11 +52,11 @@ html, body {
 		</div>
 
 	</div>
-	<div class="uk-width-6-10 uk-width-large-8-10 uk-height-1-1"></div>
-	<div class="uk-width-2-10 uk-width-large-1-10 uk-height-1-1">
+	<div class="uk-width-5-10 uk-width-large-7-10 uk-height-1-1"></div>
+	<div class="uk-width-3-10 uk-width-large-2-10 uk-height-1-1">
 		<br/><br/>
 
-		<div class="uk-panel uk-panel-box">
+		<div class="uk-panel uk-panel-box uk-scrollable-text uk-height-1-1">
 		<ul id="obj-list" class="uk-nav uk-nav-side">
 			<li><a href="">vnfjkdslvfdnsjk</a></li>
 			<li class="uk-active"><a href="">vnfjkdslvfdnsjk</a></li>
@@ -89,29 +74,43 @@ html, body {
 <nav style="position: absolute;" class="uk-navbar uk-width-1-1">
 	<div class="uk-navbar-content">
 		<div class="uk-button-group">
-			<a id="undo" class="uk-button uk-button-danger" href="#" data-uk-tooltip title="undo"><i class="uk-icon-reply"></i></a>
-			<a id="redo" class="uk-button uk-button-success" href="#" data-uk-tooltip title="redo"><i class="uk-icon-share"></i></a>
+			<a id="upload" data-uk-modal="{target:'#UploadModal'}" class="uk-button uk-button-primary" href="#" data-uk-tooltip title="Upload"><i class="uk-icon-upload"></i></a>
+			<a id="download" class="uk-button uk-button-primary" href="#" data-uk-tooltip title="Download"><i class="uk-icon-download"></i></a>
 		</div>
-	</div>
-	<ul class="uk-navbar-nav">
-		<li class="uk-parent" data-uk-dropdown="">
-			<a href="#">Add <i class="uk-icon-caret-down"></i></a>
 
-			<div style="" class="uk-dropdown uk-dropdown-navbar">
+		<div class="uk-button-group">
+			<a id="undo" class="uk-button uk-button-danger" href="#" data-uk-tooltip title="Undo"><i class="uk-icon-reply"></i></a>
+			<a id="redo" class="uk-button uk-button-success" href="#" data-uk-tooltip title="Redo"><i class="uk-icon-share"></i></a>
+		</div>
+
+		<div class="uk-button-dropdown" data-uk-dropdown>
+			<a id="" class="uk-button uk-button-danger" href="#" data-uk-tooltip="{pos:'right'}" title="Add"><i class="uk-icon-plus"></i></a>
+			<div class="uk-dropdown uk-dropdown-navbar">
 				<ul class="uk-nav uk-nav-navbar">
-					<li><a data-uk-modal="{target:'#AddPrismModal',  bgclose:false}" href="#">Add Prism</a></li>
-					<li><a data-uk-modal="{target:'#AddPyramidModal',bgclose:false}" href="#">Add Pyramid</a></li>
+					<li><a data-uk-modal="{target:'#AddPrismModal'}" href="#">Prism</a></li>
+					<li><a data-uk-modal="{target:'#AddPyramidModal'}" href="#">Pyramid</a></li>
+					<li><a data-uk-modal="{target:'#AddCylinderModal'}" href="#">Cylinder</a></li>
+					<li><a data-uk-modal="{target:'#AddShapeModal'}" href="#">Shape</a></li>
+					<li><a data-uk-modal="{target:'#AddPathModal'}" href="#">Path</a></li>
 				</ul>
 			</div>
-
-		</li>
-	</ul>
+		</div>
+	</div>
 </nav>
+
+<div id="UploadModal" class="uk-modal">
+	<div class="uk-modal-dialog uk-modal-dialog-frameless">
+		<a class="uk-modal-close uk-close uk-close-alt"></a>
+		<div id="upload-drop" class="uk-placeholder uk-text-center">
+			<i class="uk-icon-upload uk-icon-large uk-text-muted uk-margin-small-right"></i>
+		</div>
+	</div>
+</div>
 
 
 <div id="AddPrismModal" class="uk-modal">
 	<div class="uk-modal-dialog">
-		<a class="uk-modal-close uk-close"></a>
+		<a class="uk-modal-close uk-close uk-close-alt"></a>
 		<form class="uk-form uk-form-stacked">
 			<fieldset>
 				<legend>Add Prism</legend>
@@ -150,7 +149,7 @@ html, body {
 
 <div id="AddPyramidModal" class="uk-modal">
 	<div class="uk-modal-dialog">
-		<a class="uk-modal-close uk-close"></a>
+		<a class="uk-modal-close uk-close uk-close-alt"></a>
 		<form class="uk-form uk-form-stacked">
 			<fieldset>
 				<legend>Add Pyramid</legend>
@@ -179,6 +178,116 @@ html, body {
 
 				<div class="uk-form-row">
 					<a id="AddPyramid" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Add</a>
+				</div>
+
+			</fieldset>
+		</form>
+	</div>
+</div>
+
+
+<div id="AddCylinderModal" class="uk-modal">
+	<div class="uk-modal-dialog">
+		<a class="uk-modal-close uk-close uk-close-alt"></a>
+		<form class="uk-form uk-form-stacked">
+			<fieldset>
+				<legend>Add Cylinder</legend>
+
+				<div class="uk-form-row">
+					<span class="uk-form-label" for="">Position</span>
+					<div class="uk-form-controls uk-form-controls-text">
+						<p class="uk-form-controls-condensed">
+							<label for="x">X</label> <input id="x" value="0" class="uk-form-width-small uk-form-small" type="number">
+							<label for="y">Y</label> <input id="y" value="0" class="uk-form-width-small uk-form-small" type="number">
+							<label for="z">Z</label> <input id="z" value="0" class="uk-form-width-small uk-form-small" type="number">
+						</p>
+					</div>
+				</div>
+
+				<div class="uk-form-row">
+					<span class="uk-form-label" for="">Size</span>
+					<div class="uk-form-controls uk-form-controls-text">
+						<p class="uk-form-controls-condensed">
+							<label for="radius">Radius</label> <input id="radius" value="1" class="uk-form-width-small uk-form-small" type="number">
+							<label for="vertices">Vertices</label> <input id="vertices" value="30" class="uk-form-width-small uk-form-small" type="number">
+							<label for="height">Height</label> <input id="height" value="1" class="uk-form-width-small uk-form-small" type="number">
+						</p>
+					</div>
+				</div>
+
+				<div class="uk-form-row">
+					<a id="AddCylinder" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Add</a>
+				</div>
+
+			</fieldset>
+		</form>
+	</div>
+</div>
+
+<div id="AddShapeModal" class="uk-modal">
+	<div class="uk-modal-dialog">
+		<a class="uk-modal-close uk-close uk-close-alt"></a>
+		<form class="uk-form uk-form-stacked">
+			<fieldset>
+				<legend>Add Shape</legend>
+
+				<div class="uk-form-row">
+					<label for="height">Height</label> <input id="height" value="1" class="uk-form-width-small uk-form-small" type="number">
+				</div>
+
+				<div class="uk-form-row">
+					<a onclick="$('#shape-list').append($('#shape-tpl').text());" class="uk-button uk-button-danger uk-width-1-1">Add Point</a>
+				</div>
+
+				<div id="shape-list"></div>
+
+				<script id="shape-tpl" type="text">
+					<div class="uk-form-row">
+						<div class="uk-form-controls uk-form-controls-text">
+							<p class="uk-form-controls-condensed">
+								<label for="x">X</label> <input id="x" name="x" value="0" class="uk-form-width-small uk-form-small" type="number">
+								<label for="y">Y</label> <input id="y" name="y" value="0" class="uk-form-width-small uk-form-small" type="number">
+								<label for="z">Z</label> <input id="z" name="z" value="0" class="uk-form-width-small uk-form-small" type="number">
+							</p>
+						</div>
+					</div>
+				</script>
+
+				<div class="uk-form-row">
+					<a id="AddShape" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Add</a>
+				</div>
+
+			</fieldset>
+		</form>
+	</div>
+</div>
+<div id="AddPathModal" class="uk-modal">
+	<div class="uk-modal-dialog">
+		<a class="uk-modal-close uk-close uk-close-alt"></a>
+		<form class="uk-form uk-form-stacked">
+			<fieldset>
+				<legend>Add Path</legend>
+
+				<div class="uk-form-row">
+					<a onclick="$('#path-list').append($('#path-tpl').text());" class="uk-button uk-button-danger uk-width-1-1">Add Point</a>
+				</div>
+
+				<div id="path-list"></div>
+
+				<script id="path-tpl" type="text">
+					<div class="uk-form-row">
+						<div class="uk-form-controls uk-form-controls-text">
+							<p class="uk-form-controls-condensed">
+								<label for="x">X</label> <input id="x" name="x" value="0" class="uk-form-width-small uk-form-small" type="number">
+								<label for="y">Y</label> <input id="y" name="y" value="0" class="uk-form-width-small uk-form-small" type="number">
+								<label for="z">Z</label> <input id="z" name="z" value="0" class="uk-form-width-small uk-form-small" type="number">
+							</p>
+						</div>
+					</div>
+				</script>
+
+				<div class="uk-form-row">
+					<a id="AddPath" class="uk-modal-close uk-button uk-button-primary uk-width-1-1">Add</a>
 				</div>
 
 			</fieldset>
